[package]
name = "hephaestus"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = { version = "2.9.0", features = ["std"] }
bytes = "1.10.1"
clap = { version = "4.5.32", features = ["derive"] }
itertools = "0.14.0"
ordered_hash_map = "0.4.0"
pest = { version = "2.7.15", optional = true }
pest_derive = { version = "2.7.15", optional = true }
semver = "1.0.26"
thiserror = "2.0.12"

[features]
default = ["assembler"]
assembler = ["pest", "pest_derive"]

[[bin]]
name = "heph-asm"
path = "src/bin/heph-asm.rs"
required-features = ["assembler"]
