[package]
name = "hephaestus"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = { version = "2.9.0", features = ["std"] }
bytes = "1.10.1"
clap = { version = "4.5.32", features = ["derive"] }
hex = "0.4.3"
itertools = "0.14.0"
ordered_hash_map = "0.4.0"
pest = { version = "2.7.15", optional = true }
pest_derive = { version = "2.7.15", optional = true }
semver = "1.0.26"
thiserror = "2.0.12"
lazy_static = "1.5.0"
cbor = { version = "0.4.1", optional = true }
rustc-serialize = { version = "0.3.25", optional = true }
wit-component = { version = "0.227.1", optional = true }
wit-parser = { version = "0.227.1", optional = true }
sha2 = "0.10.8"

[features]
default = ["complete"]
assembler = ["pest", "pest_derive"]
cbor-features = ["cbor", "rustc-serialize"]
component-model = ["wit-component", "wit-parser"]
complete = ["assembler", "cbor-features", "component-model"]

[[bin]]
name = "hasm"
path = "src/bin/hasm.rs"
required-features = ["assembler"]

[profile.min-size]
inherits = "release"
opt-level = "z"
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 100
